add support for MIOTA as IOTA symbol

--- a/webfont/cryptocoins.css
+++ b/webfont/cryptocoins.css
@@ -461,6 +461,14 @@
   content: "\E06E";
 }
 
+.cc.MIOTA-alt::before {
+  content: "\E06D";
+}
+
+.cc.MIOTA::before {
+  content: "\E06E";
+}
+
 .cc.JBS-alt::before {
   content: "\E06F";
 }
