--- a/webfont/cryptocoins.css
+++ b/webfont/cryptocoins.css
@@ -453,19 +453,11 @@
   content: "\E06C";
 }
 
-.cc.IOTA-alt::before {
+.cc.IOTA-alt::before, .cc.MIOTA-alt::before {
   content: "\E06D";
 }
 
-.cc.IOTA::before {
-  content: "\E06E";
-}
-
-.cc.MIOTA-alt::before {
-  content: "\E06D";
-}
-
-.cc.MIOTA::before {
+.cc.IOTA::before, .cc.MIOTA::before {
   content: "\E06E";
 }
 
