pack + fix everything nicely before release

--- a/webfont/cryptocoins.css
+++ b/webfont/cryptocoins.css
@@ -537,11 +537,11 @@
   content: "\E081";
 }
 
-.cc.LISK-alt::before {
+.cc.LSK-alt::before {
   content: "\E082";
 }
 
-.cc.LISK::before {
+.cc.LSK::before {
   content: "\E083";
 }
 
