Adds TRX and ICX icons

--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -53,6 +53,7 @@
 .GRS { color: #648FA0; }
 .HEAT { color: #ff5606; }
 .ICN { color: #4c6f8c; }
+.ICX { color: #00CACB; }
 .IFC { color: #ed272d; }
 .INCNT { color: #f2932f; }
 .IOC { color: #2fa3de; }
@@ -118,6 +119,7 @@
 .SYNC { color: #008DD2; }
 .SYS { color: #0098DA; }
 .TRIG { color: #1fbff4; }
+.TRX { color: #000; }
 .TX { color: #1F8BCC; }
 .UBQ { color: #00ec8d; }
 .UNITY { color: #ED8527; }
