--- a/webfont/cryptocoins.css
+++ b/webfont/cryptocoins.css
@@ -461,690 +461,706 @@
   content: "\E06E";
 }
 
-.cc.IFC-alt::before {
+.cc.ICX-alt::before {
   content: "\E06F";
 }
 
-.cc.IFC::before {
+.cc.ICX::before {
   content: "\E070";
 }
 
-.cc.INCNT-alt::before {
+.cc.IFC-alt::before {
   content: "\E071";
 }
 
-.cc.INCNT::before {
+.cc.IFC::before {
   content: "\E072";
 }
 
-.cc.IOC-alt::before {
+.cc.INCNT-alt::before {
   content: "\E073";
 }
 
-.cc.IOC::before {
+.cc.INCNT::before {
   content: "\E074";
 }
 
-.cc.IOTA-alt::before {
+.cc.IOC-alt::before {
   content: "\E075";
 }
 
-.cc.IOTA::before {
+.cc.IOC::before {
   content: "\E076";
 }
 
-.cc.JBS-alt::before {
+.cc.IOTA-alt::before {
   content: "\E077";
 }
 
-.cc.JBS::before {
+.cc.IOTA::before {
   content: "\E078";
 }
 
-.cc.KMD-alt::before {
+.cc.JBS-alt::before {
   content: "\E079";
 }
 
-.cc.KMD::before {
+.cc.JBS::before {
   content: "\E07A";
 }
 
-.cc.KOBO::before {
+.cc.KMD-alt::before {
   content: "\E07B";
 }
 
-.cc.KORE-alt::before {
+.cc.KMD::before {
   content: "\E07C";
 }
 
-.cc.KORE::before {
+.cc.KOBO::before {
   content: "\E07D";
 }
 
-.cc.LBC-alt::before {
+.cc.KORE-alt::before {
   content: "\E07E";
 }
 
-.cc.LBC::before {
+.cc.KORE::before {
   content: "\E07F";
 }
 
-.cc.LDOGE-alt::before {
+.cc.LBC-alt::before {
   content: "\E080";
 }
 
-.cc.LDOGE::before {
+.cc.LBC::before {
   content: "\E081";
 }
 
-.cc.LSK-alt::before {
+.cc.LDOGE-alt::before {
   content: "\E082";
 }
 
-.cc.LSK::before {
+.cc.LDOGE::before {
   content: "\E083";
 }
 
-.cc.LTC-alt::before {
+.cc.LSK-alt::before {
   content: "\E084";
 }
 
-.cc.LTC::before {
+.cc.LSK::before {
   content: "\E085";
 }
 
-.cc.MAID-alt::before {
+.cc.LTC-alt::before {
   content: "\E086";
 }
 
-.cc.MAID::before {
+.cc.LTC::before {
   content: "\E087";
 }
 
-.cc.MCO-alt::before {
+.cc.MAID-alt::before {
   content: "\E088";
 }
 
-.cc.MCO::before {
+.cc.MAID::before {
   content: "\E089";
 }
 
-.cc.MINT-alt::before {
+.cc.MCO-alt::before {
   content: "\E08A";
 }
 
-.cc.MINT::before {
+.cc.MCO::before {
   content: "\E08B";
 }
 
-.cc.MONA-alt::before {
+.cc.MINT-alt::before {
   content: "\E08C";
 }
 
-.cc.MONA::before {
+.cc.MINT::before {
   content: "\E08D";
 }
 
-.cc.MRC::before {
+.cc.MONA-alt::before {
   content: "\E08E";
 }
 
-.cc.MSC-alt::before {
+.cc.MONA::before {
   content: "\E08F";
 }
 
-.cc.MSC::before {
+.cc.MRC::before {
   content: "\E090";
 }
 
-.cc.MTR-alt::before {
+.cc.MSC-alt::before {
   content: "\E091";
 }
 
-.cc.MTR::before {
+.cc.MSC::before {
   content: "\E092";
 }
 
-.cc.MUE-alt::before {
+.cc.MTR-alt::before {
   content: "\E093";
 }
 
-.cc.MUE::before {
+.cc.MTR::before {
   content: "\E094";
 }
 
-.cc.NBT::before {
+.cc.MUE-alt::before {
   content: "\E095";
 }
 
-.cc.NEO-alt::before {
+.cc.MUE::before {
   content: "\E096";
 }
 
-.cc.NEO::before {
+.cc.NBT::before {
   content: "\E097";
 }
 
-.cc.NEOS-alt::before {
+.cc.NEO-alt::before {
   content: "\E098";
 }
 
-.cc.NEOS::before {
+.cc.NEO::before {
   content: "\E099";
 }
 
-.cc.NEU-alt::before {
+.cc.NEOS-alt::before {
   content: "\E09A";
 }
 
-.cc.NEU::before {
+.cc.NEOS::before {
   content: "\E09B";
 }
 
-.cc.NLG-alt::before {
+.cc.NEU-alt::before {
   content: "\E09C";
 }
 
-.cc.NLG::before {
+.cc.NEU::before {
   content: "\E09D";
 }
 
-.cc.NMC-alt::before {
+.cc.NLG-alt::before {
   content: "\E09E";
 }
 
-.cc.NMC::before {
+.cc.NLG::before {
   content: "\E09F";
 }
 
-.cc.NOTE-alt::before {
+.cc.NMC-alt::before {
   content: "\E0A0";
 }
 
-.cc.NOTE::before {
+.cc.NMC::before {
   content: "\E0A1";
 }
 
-.cc.NVC-alt::before {
+.cc.NOTE-alt::before {
   content: "\E0A2";
 }
 
-.cc.NVC::before {
+.cc.NOTE::before {
   content: "\E0A3";
 }
 
-.cc.NXT-alt::before {
+.cc.NVC-alt::before {
   content: "\E0A4";
 }
 
-.cc.NXT::before {
+.cc.NVC::before {
   content: "\E0A5";
 }
 
-.cc.OK-alt::before {
+.cc.NXT-alt::before {
   content: "\E0A6";
 }
 
-.cc.OK::before {
+.cc.NXT::before {
   content: "\E0A7";
 }
 
-.cc.OMG-alt::before {
+.cc.OK-alt::before {
   content: "\E0A8";
 }
 
-.cc.OMG::before {
+.cc.OK::before {
   content: "\E0A9";
 }
 
-.cc.OMNI-alt::before {
+.cc.OMG-alt::before {
   content: "\E0AA";
 }
 
-.cc.OMNI::before {
+.cc.OMG::before {
   content: "\E0AB";
 }
 
-.cc.OPAL-alt::before {
+.cc.OMNI-alt::before {
   content: "\E0AC";
 }
 
-.cc.OPAL::before {
+.cc.OMNI::before {
   content: "\E0AD";
 }
 
-.cc.PART-alt::before {
+.cc.OPAL-alt::before {
   content: "\E0AE";
 }
 
-.cc.PART::before {
+.cc.OPAL::before {
   content: "\E0AF";
 }
 
-.cc.PIGGY-alt::before {
+.cc.PART-alt::before {
   content: "\E0B0";
 }
 
-.cc.PIGGY::before {
+.cc.PART::before {
   content: "\E0B1";
 }
 
-.cc.PINK-alt::before {
+.cc.PIGGY-alt::before {
   content: "\E0B2";
 }
 
-.cc.PINK::before {
+.cc.PIGGY::before {
   content: "\E0B3";
 }
 
-.cc.PIVX-alt::before {
+.cc.PINK-alt::before {
   content: "\E0B4";
 }
 
-.cc.PIVX::before {
+.cc.PINK::before {
   content: "\E0B5";
 }
 
-.cc.POT-alt::before {
+.cc.PIVX-alt::before {
   content: "\E0B6";
 }
 
-.cc.POT::before {
+.cc.PIVX::before {
   content: "\E0B7";
 }
 
-.cc.PPC-alt::before {
+.cc.POT-alt::before {
   content: "\E0B8";
 }
 
-.cc.PPC::before {
+.cc.POT::before {
   content: "\E0B9";
 }
 
-.cc.QRK-alt::before {
+.cc.PPC-alt::before {
   content: "\E0BA";
 }
 
-.cc.QRK::before {
+.cc.PPC::before {
   content: "\E0BB";
 }
 
-.cc.QTUM-alt::before {
+.cc.QRK-alt::before {
   content: "\E0BC";
 }
 
-.cc.QTUM::before {
+.cc.QRK::before {
   content: "\E0BD";
 }
 
-.cc.RADS-alt::before {
+.cc.QTUM-alt::before {
   content: "\E0BE";
 }
 
-.cc.RADS::before {
+.cc.QTUM::before {
   content: "\E0BF";
 }
 
-.cc.RBIES-alt::before {
+.cc.RADS-alt::before {
   content: "\E0C0";
 }
 
-.cc.RBIES::before {
+.cc.RADS::before {
   content: "\E0C1";
 }
 
-.cc.RBT-alt::before {
+.cc.RBIES-alt::before {
   content: "\E0C2";
 }
 
-.cc.RBT::before {
+.cc.RBIES::before {
   content: "\E0C3";
 }
 
-.cc.RBY-alt::before {
+.cc.RBT-alt::before {
   content: "\E0C4";
 }
 
-.cc.RBY::before {
+.cc.RBT::before {
   content: "\E0C5";
 }
 
-.cc.RDD-alt::before {
+.cc.RBY-alt::before {
   content: "\E0C6";
 }
 
-.cc.RDD::before {
+.cc.RBY::before {
   content: "\E0C7";
 }
 
-.cc.REP-alt::before {
+.cc.RDD-alt::before {
   content: "\E0C8";
 }
 
-.cc.REP::before {
+.cc.RDD::before {
   content: "\E0C9";
 }
 
-.cc.RISE-alt::before {
+.cc.REP-alt::before {
   content: "\E0CA";
 }
 
-.cc.RISE::before {
+.cc.REP::before {
   content: "\E0CB";
 }
 
-.cc.SALT-alt::before {
+.cc.RISE-alt::before {
   content: "\E0CC";
 }
 
-.cc.SALT::before {
+.cc.RISE::before {
   content: "\E0CD";
 }
 
-.cc.SAR-alt::before {
+.cc.SALT-alt::before {
   content: "\E0CE";
 }
 
-.cc.SAR::before {
+.cc.SALT::before {
   content: "\E0CF";
 }
 
-.cc.SCOT-alt::before {
+.cc.SAR-alt::before {
   content: "\E0D0";
 }
 
-.cc.SCOT::before {
+.cc.SAR::before {
   content: "\E0D1";
 }
 
-.cc.SDC-alt::before {
+.cc.SCOT-alt::before {
   content: "\E0D2";
 }
 
-.cc.SDC::before {
+.cc.SCOT::before {
   content: "\E0D3";
 }
 
-.cc.SIA-alt::before {
+.cc.SDC-alt::before {
   content: "\E0D4";
 }
 
-.cc.SIA::before {
+.cc.SDC::before {
   content: "\E0D5";
 }
 
-.cc.SJCX-alt::before {
+.cc.SIA-alt::before {
   content: "\E0D6";
 }
 
-.cc.SJCX::before {
+.cc.SIA::before {
   content: "\E0D7";
 }
 
-.cc.SLG-alt::before {
+.cc.SJCX-alt::before {
   content: "\E0D8";
 }
 
-.cc.SLG::before {
+.cc.SJCX::before {
   content: "\E0D9";
 }
 
-.cc.SLS-alt::before {
+.cc.SLG-alt::before {
   content: "\E0DA";
 }
 
-.cc.SLS::before {
+.cc.SLG::before {
   content: "\E0DB";
 }
 
-.cc.SNRG-alt::before {
+.cc.SLS-alt::before {
   content: "\E0DC";
 }
 
-.cc.SNRG::before {
+.cc.SLS::before {
   content: "\E0DD";
 }
 
-.cc.START-alt::before {
+.cc.SNRG-alt::before {
   content: "\E0DE";
 }
 
-.cc.START::before {
+.cc.SNRG::before {
   content: "\E0DF";
 }
 
-.cc.STEEM-alt::before {
+.cc.START-alt::before {
   content: "\E0E0";
 }
 
-.cc.STEEM::before {
+.cc.START::before {
   content: "\E0E1";
 }
 
-.cc.STR-alt::before {
+.cc.STEEM-alt::before {
   content: "\E0E2";
 }
 
-.cc.STR::before {
+.cc.STEEM::before {
   content: "\E0E3";
 }
 
-.cc.STRAT-alt::before {
+.cc.STR-alt::before {
   content: "\E0E4";
 }
 
-.cc.STRAT::before {
+.cc.STR::before {
   content: "\E0E5";
 }
 
-.cc.SWIFT-alt::before {
+.cc.STRAT-alt::before {
   content: "\E0E6";
 }
 
-.cc.SWIFT::before {
+.cc.STRAT::before {
   content: "\E0E7";
 }
 
-.cc.SYNC-alt::before {
+.cc.SWIFT-alt::before {
   content: "\E0E8";
 }
 
-.cc.SYNC::before {
+.cc.SWIFT::before {
   content: "\E0E9";
 }
 
-.cc.SYS-alt::before {
+.cc.SYNC-alt::before {
   content: "\E0EA";
 }
 
-.cc.SYS::before {
+.cc.SYNC::before {
   content: "\E0EB";
 }
 
-.cc.TRIG-alt::before {
+.cc.SYS-alt::before {
   content: "\E0EC";
 }
 
-.cc.TRIG::before {
+.cc.SYS::before {
   content: "\E0ED";
 }
 
-.cc.TX-alt::before {
+.cc.TRIG-alt::before {
   content: "\E0EE";
 }
 
-.cc.TX::before {
+.cc.TRIG::before {
   content: "\E0EF";
 }
 
-.cc.UBQ-alt::before {
+.cc.TRX-alt::before {
   content: "\E0F0";
 }
 
-.cc.UBQ::before {
+.cc.TRX::before {
   content: "\E0F1";
 }
 
-.cc.UNITY-alt::before {
+.cc.TX-alt::before {
   content: "\E0F2";
 }
 
-.cc.UNITY::before {
+.cc.TX::before {
   content: "\E0F3";
 }
 
-.cc.USDT-alt::before {
+.cc.UBQ-alt::before {
   content: "\E0F4";
 }
 
-.cc.USDT::before {
+.cc.UBQ::before {
   content: "\E0F5";
 }
 
-.cc.VIOR-alt::before {
+.cc.UNITY-alt::before {
   content: "\E0F6";
 }
 
-.cc.VIOR::before {
+.cc.UNITY::before {
   content: "\E0F7";
 }
 
-.cc.VNL-alt::before {
+.cc.USDT-alt::before {
   content: "\E0F8";
 }
 
-.cc.VNL::before {
+.cc.USDT::before {
   content: "\E0F9";
 }
 
-.cc.VPN-alt::before {
+.cc.VIOR-alt::before {
   content: "\E0FA";
 }
 
-.cc.VPN::before {
+.cc.VIOR::before {
   content: "\E0FB";
 }
 
-.cc.VRC-alt::before {
+.cc.VNL-alt::before {
   content: "\E0FC";
 }
 
-.cc.VRC::before {
+.cc.VNL::before {
   content: "\E0FD";
 }
 
-.cc.VTC-alt::before {
+.cc.VPN-alt::before {
   content: "\E0FE";
 }
 
-.cc.VTC::before {
+.cc.VPN::before {
   content: "\E0FF";
 }
 
-.cc.WAVES-alt::before {
+.cc.VRC-alt::before {
   content: "\E100";
 }
 
-.cc.WAVES::before {
+.cc.VRC::before {
   content: "\E101";
 }
 
-.cc.XAI-alt::before {
+.cc.VTC-alt::before {
   content: "\E102";
 }
 
-.cc.XAI::before {
+.cc.VTC::before {
   content: "\E103";
 }
 
-.cc.XBS-alt::before {
+.cc.WAVES-alt::before {
   content: "\E104";
 }
 
-.cc.XBS::before {
+.cc.WAVES::before {
   content: "\E105";
 }
 
-.cc.XCP-alt::before {
+.cc.XAI-alt::before {
   content: "\E106";
 }
 
-.cc.XCP::before {
+.cc.XAI::before {
   content: "\E107";
 }
 
-.cc.XEM-alt::before {
+.cc.XBS-alt::before {
   content: "\E108";
 }
 
-.cc.XEM::before {
+.cc.XBS::before {
   content: "\E109";
 }
 
-.cc.XMR::before {
+.cc.XCP-alt::before {
   content: "\E10A";
 }
 
-.cc.XPM-alt::before {
+.cc.XCP::before {
   content: "\E10B";
 }
 
-.cc.XPM::before {
+.cc.XEM-alt::before {
   content: "\E10C";
 }
 
-.cc.XRP-alt::before {
+.cc.XEM::before {
   content: "\E10D";
 }
 
-.cc.XRP::before {
+.cc.XMR::before {
   content: "\E10E";
 }
 
-.cc.XTZ-alt::before {
+.cc.XPM-alt::before {
   content: "\E10F";
 }
 
-.cc.XTZ::before {
+.cc.XPM::before {
   content: "\E110";
 }
 
-.cc.XVG-alt::before {
+.cc.XRP-alt::before {
   content: "\E111";
 }
 
-.cc.XVG::before {
+.cc.XRP::before {
   content: "\E112";
 }
 
-.cc.XZC-alt::before {
+.cc.XTZ-alt::before {
   content: "\E113";
 }
 
-.cc.XZC::before {
+.cc.XTZ::before {
   content: "\E114";
 }
 
-.cc.YBC-alt::before {
+.cc.XVG-alt::before {
   content: "\E115";
 }
 
-.cc.YBC::before {
+.cc.XVG::before {
   content: "\E116";
 }
 
-.cc.ZEC-alt::before {
+.cc.XZC-alt::before {
   content: "\E117";
 }
 
-.cc.ZEC::before {
+.cc.XZC::before {
   content: "\E118";
 }
 
-.cc.ZEIT-alt::before {
+.cc.YBC-alt::before {
   content: "\E119";
 }
 
-.cc.ZEIT::before {
+.cc.YBC::before {
   content: "\E11A";
+}
+
+.cc.ZEC-alt::before {
+  content: "\E11B";
+}
+
+.cc.ZEC::before {
+  content: "\E11C";
+}
+
+.cc.ZEIT-alt::before {
+  content: "\E11D";
+}
+
+.cc.ZEIT::before {
+  content: "\E11E";
 }
