Correctly added Viacoin

--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -122,6 +122,7 @@
 .UBQ { color: #00ec8d; }
 .UNITY { color: #ED8527; }
 .USDT { color: #2CA07A; }
+.VIA { color: #231f20; }
 .VIOR { color: #1F52A4; }
 .VNL { color: #404249; }
 .VPN { color: #589700; }
