Added new coins

--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -6,6 +6,7 @@
 .ARCH { color: #002652; }
 .ARDR { color: #1162a1; }
 .ARK { color: #F70000; }
+.AST { color: #18F18F; }
 .AUR { color: #136c5e; }
 .BANX { color: #225BA6; }
 .BAT { color: #9e1f63; }
@@ -13,6 +14,7 @@
 .BC { color: #202121; }
 .BCN { color: #964F51; }
 .BFT { color: #4fc3f7; }
+.BLZ { color: #6BE6BE }
 .BRK { color: #194fa0; }
 .BRX { color: #a8c300; }
 .BSD { color: #1186E7; }
@@ -41,6 +43,7 @@
 .FLO { color: #1358C8; }
 .FRK { color: #0633cd; }
 .FTC { color: #679EF1; }
+.FUN { color: #EF3A5C; }
 .GAME { color: #ed1b24; }
 .GBYTE { color: #2C3E50; }
 .GDC { color: #E9A226; }
@@ -71,14 +74,17 @@
 .MONA { color: #a99364; }
 .MRC { color: #4279bd; }
 .MSC { color: #1D4983; }
+.MTL { color: #242424; }
 .MTR { color: #b92429; }
-.MUE { color: #f5a10e; }
+.MUE { color: #C26C26; }
+.MYST { color: #f5a10e; }
 .NBT { color: #FFC93D; }
 .NEO { color: #58BF00; }
 .NEOS { color: #1d1d1b; }
 .NEU { color: #2983c0; }
 .NLG { color: #003E7E; }
 .NMC { color: #6787B7; }
+.NMR { color: #8DE8DE; }
 .NOTE { color: #42daff; }
 .NVC { color: #ecab41; }
 .NXT { color: #008FBB; }
@@ -100,6 +106,7 @@
 .RBY { color: #D31F26; }
 .RDD { color: #ED1C24; }
 .REP { color: #40a2cb; }
+.RHOC { color: #C26C26; }
 .RISE { color: #43CEA2; }
 .SALT { color: #373C43; }
 .SAR { color: #1B72B8; }
@@ -141,3 +148,4 @@
 .YBC { color: #D6C154; }
 .ZEC { color: #e5a93d; }
 .ZEIT { color: #ACACAC; }
+.ZRX { color: #424242; }
