--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -19,6 +19,7 @@
 .BTA { color: #210094; }
 .BTC, .BCH { color: #F7931A; }
 .BTCD { color: #2A72DC; }
+.BTCP { color: #272D63; }
 .BTM { color: #9FA8B4; }
 .BTS { color: #03A9E0; }
 .CLAM { color: #D6AB31; }
