--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -112,7 +112,7 @@
 .SNRG { color: #160363; }
 .START { color: #01AEF0; }
 .STEEM { color: #1A5099; }
-.STR { color: #08B5E5; }
+.XLM { color: #08B5E5; }
 .STRAT { color: #2398dd; }
 .SWIFT { color: #428BCA; }
 .SYNC { color: #008DD2; }
