Updated LSK Icon

--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -71,7 +71,7 @@
 .KORE { color: #DF4124; }
 .LBC { color: #015C47; }
 .LDOGE { color: #ffcc00; }
-.LISK { color: #1A6896; }
+.LSK { color: #0D4EA0; }
 .LTC { color: #838383; }
 .MAID { color: #5492D6; }
 .MARKS { color: #504C4C; }
