Stellar STR => XLM update (closes #121)

--- a/webfont/cryptocoins.css
+++ b/webfont/cryptocoins.css
@@ -1001,175 +1001,175 @@
   content: "\E0F5";
 }
 
-.cc.STR-alt::before {
+.cc.STRAT-alt::before {
   content: "\E0F6";
 }
 
-.cc.STR::before {
+.cc.STRAT::before {
   content: "\E0F7";
 }
 
-.cc.STRAT-alt::before {
+.cc.SWIFT-alt::before {
   content: "\E0F8";
 }
 
-.cc.STRAT::before {
+.cc.SWIFT::before {
   content: "\E0F9";
 }
 
-.cc.SWIFT-alt::before {
+.cc.SYNC-alt::before {
   content: "\E0FA";
 }
 
-.cc.SWIFT::before {
+.cc.SYNC::before {
   content: "\E0FB";
 }
 
-.cc.SYNC-alt::before {
+.cc.SYS-alt::before {
   content: "\E0FC";
 }
 
-.cc.SYNC::before {
+.cc.SYS::before {
   content: "\E0FD";
 }
 
-.cc.SYS-alt::before {
+.cc.TRIG-alt::before {
   content: "\E0FE";
 }
 
-.cc.SYS::before {
+.cc.TRIG::before {
   content: "\E0FF";
 }
 
-.cc.TRIG-alt::before {
+.cc.TX-alt::before {
   content: "\E100";
 }
 
-.cc.TRIG::before {
+.cc.TX::before {
   content: "\E101";
 }
 
-.cc.TX-alt::before {
+.cc.UBQ-alt::before {
   content: "\E102";
 }
 
-.cc.TX::before {
+.cc.UBQ::before {
   content: "\E103";
 }
 
-.cc.UBQ-alt::before {
+.cc.UNITY-alt::before {
   content: "\E104";
 }
 
-.cc.UBQ::before {
+.cc.UNITY::before {
   content: "\E105";
 }
 
-.cc.UNITY-alt::before {
+.cc.USDT-alt::before {
   content: "\E106";
 }
 
-.cc.UNITY::before {
+.cc.USDT::before {
   content: "\E107";
 }
 
-.cc.USDT-alt::before {
+.cc.VIA-alt::before {
   content: "\E108";
 }
 
-.cc.USDT::before {
+.cc.VIA::before {
   content: "\E109";
 }
 
-.cc.VIA-alt::before {
+.cc.VIOR-alt::before {
   content: "\E10A";
 }
 
-.cc.VIA::before {
+.cc.VIOR::before {
   content: "\E10B";
 }
 
-.cc.VIOR-alt::before {
+.cc.VNL-alt::before {
   content: "\E10C";
 }
 
-.cc.VIOR::before {
+.cc.VNL::before {
   content: "\E10D";
 }
 
-.cc.VNL-alt::before {
+.cc.VPN-alt::before {
   content: "\E10E";
 }
 
-.cc.VNL::before {
+.cc.VPN::before {
   content: "\E10F";
 }
 
-.cc.VPN-alt::before {
+.cc.VRC-alt::before {
   content: "\E110";
 }
 
-.cc.VPN::before {
+.cc.VRC::before {
   content: "\E111";
 }
 
-.cc.VRC-alt::before {
+.cc.VTC-alt::before {
   content: "\E112";
 }
 
-.cc.VRC::before {
+.cc.VTC::before {
   content: "\E113";
 }
 
-.cc.VTC-alt::before {
+.cc.WAVES-alt::before {
   content: "\E114";
 }
 
-.cc.VTC::before {
+.cc.WAVES::before {
   content: "\E115";
 }
 
-.cc.WAVES-alt::before {
+.cc.XAI-alt::before {
   content: "\E116";
 }
 
-.cc.WAVES::before {
+.cc.XAI::before {
   content: "\E117";
 }
 
-.cc.XAI-alt::before {
+.cc.XBC::before {
   content: "\E118";
 }
 
-.cc.XAI::before {
+.cc.XBS-alt::before {
   content: "\E119";
 }
 
-.cc.XBC::before {
+.cc.XBS::before {
   content: "\E11A";
 }
 
-.cc.XBS-alt::before {
+.cc.XCP-alt::before {
   content: "\E11B";
 }
 
-.cc.XBS::before {
+.cc.XCP::before {
   content: "\E11C";
 }
 
-.cc.XCP-alt::before {
+.cc.XEM-alt::before {
   content: "\E11D";
 }
 
-.cc.XCP::before {
+.cc.XEM::before {
   content: "\E11E";
 }
 
-.cc.XEM-alt::before {
+.cc.XLM-alt::before {
   content: "\E11F";
 }
 
-.cc.XEM::before {
+.cc.XLM::before {
   content: "\E120";
 }
 
