fix Stellar CSS color

--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -124,7 +124,6 @@
 .SNRG { color: #160363; }
 .START { color: #01AEF0; }
 .STEEM { color: #1A5099; }
-.STR { color: #08B5E5; }
 .STRAT { color: #2398dd; }
 .SWIFT { color: #428BCA; }
 .SYNC { color: #008DD2; }
@@ -146,6 +145,7 @@
 .XBS { color: #d3261d; }
 .XCP { color: #EC1550; }
 .XEM { color: #41bf76; }
+.XLM { color: #08B5E5; }
 .XMR { color: #FF6600; }
 .XPM { color: #e5b625; }
 .XRP { color: #346AA9; }
