--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -5,7 +5,7 @@
 .ANC { color: #000; }
 .ARCH { color: #002652; }
 .ARDR { color: #1162a1; }
-.ARK { color: #F70000; }
+.ARK, .NGC { color: #F70000; }
 .AST { color: #18F18F; }
 .AUR { color: #136c5e; }
 .BANX { color: #225BA6; }
@@ -16,7 +16,9 @@
 .BCY { color: #123A5A; }
 .BELA { color: #009EF9; }
 .BFT { color: #4fc3f7; }
+.BLOCK { color: #041838; }
 .BLZ { color: #6BE6BE }
+.BNT { color: #000D2B; }
 .BRK { color: #194fa0; }
 .BRX { color: #a8c300; }
 .BSD { color: #1186E7; }
@@ -24,6 +26,7 @@
 .BTC, .BCH { color: #F7931A; }
 .BTCD { color: #2A72DC; }
 .BTCP { color: #272D63; }
+.BTG { color: #EBA809; }
 .BTM { color: #9FA8B4; }
 .BTS { color: #03A9E0; }
 .BURST { color: #2D2D2D; }
@@ -37,13 +40,18 @@
 .DGB { color: #0066cc; }
 .DGD, .DGX { color: #D8A24A; }
 .DMD { color: #5497b2; }
+.DNT { color: #2C398F; }
 .DOGE { color: #BA9F33; }
+.EBST { color: #1693D4; }
+.EDG { color: #2B1544; }
 .EMC { color: #674c8c; }
 .EMC2 { color: #00CCFF; }
+.ENG { color: #2F2F2F; }
 .EOS { color: #19191A; }
 .ERC { color: #101E84; }
 .ETC { color: #669073; }
 .ETH { color: #282828; }
+.ETN { color: #23BEE2; }
 .EXP { color: #FFAA5C; }
 .FC2 { color: #040405; }
 .FCT { color: #2175BB; }
@@ -60,14 +68,19 @@
 .GNO { color: #00A6C4; }
 .GNT { color: #00d6e3; }
 .GOLOS { color: #2670B7; }
+.GTO { color: #7F27FF; }
 .GRC { color: #88A13C; }
 .GRS { color: #648FA0; }
+.GUP { color: #37DCD8; }
 .HEAT { color: #ff5606; }
 .HUC { color: #FFC018; }
 .ICN { color: #4c6f8c; }
 .IFC { color: #ed272d; }
+.IGNIS { color: #F9C011; }
 .INCNT { color: #f2932f; }
 .IOC { color: #2fa3de; }
+.ION { color: #57BEEA; }
+.IOP { color: #4CB8D1; }
 .IOTA { color: #FFFFFF; }
 .JBS { color: #1A8BCD; }
 .KMD { color: #326464; }
@@ -77,10 +90,14 @@
 .LDOGE { color: #ffcc00; }
 .LSK { color: #0D4EA0; }
 .LTC { color: #838383; }
+.LRC { color: #2AB6F6; }
+.LUN { color: #F55749; }
+.MANA { color: #BFB5AF; }
 .MAID { color: #5492D6; }
 .MARKS { color: #504C4C; }
 .MCO { color: #0D3459; }
 .MINT { color: #006835; }
+.MLN { color: #0B1529; }
 .MONA { color: #a99364; }
 .MRC { color: #4279bd; }
 .MSC { color: #1D4983; }
@@ -89,11 +106,13 @@
 .MUE { color: #f5a10e; }
 .NAV { color: #7D59B5; }
 .MYST { color: #f5a10e; }
+.NANO { color: #4A90E2; }
 .NBT { color: #FFC93D; }
 .NEO { color: #58BF00; }
 .NEOS { color: #1d1d1b; }
 .NEU { color: #2983c0; }
 .NLG { color: #003E7E; }
+.NLC2 { color: #F28F00; }
 .NMC { color: #6787B7; }
 .NMR { color: #8DE8DE; }
 .NOTE { color: #42daff; }
@@ -109,15 +128,21 @@
 .PINK { color: #ED31CA; }
 .PIVX { color: #3b2f4d; }
 .POT { color: #105B2F; }
+.POLY { color: #4C5A95; }
+.POWR { color: #05BCA9; }
 .PPC { color: #3FA30C; }
+.PPT { color: #152743; }
 .QRK { color: #22AABF; }
+.QRL { color: #252525; }
 .QTUM { color: #359BCE; }
 .RADS { color: #924cea; }
 .RBIES { color: #C62436; }
 .RBT { color: #0d4982; }
 .RBY { color: #D31F26; }
+.RCN { color: #3555F9; }
 .RDD { color: #ED1C24; }
 .REP { color: #40a2cb; }
+.REQ { color: #6CFCCD; }
 .RIC { color: #60E4DD; }
 .RHOC { color: #C26C26; }
 .RISE { color: #43CEA2; }
@@ -129,32 +154,41 @@
 .SJCX { color: #003366; }
 .SLG { color: #5A6875; }
 .SLS { color: #1EB549; }
+.SNT { color: #5B6DEE; }
 .SNRG { color: #160363; }
+.SRN { color: #1C1C1C; }
 .START { color: #01AEF0; }
 .STEEM { color: #1A5099; }
+.STORM { color: #080D98; }
 .STRAT { color: #2398dd; }
 .SWIFT { color: #428BCA; }
 .SYNC { color: #008DD2; }
 .SYS { color: #0098DA; }
 .TRIG { color: #1fbff4; }
+.TRX { color: #000000; }
 .TX { color: #1F8BCC; }
 .UBQ { color: #00ec8d; }
 .UNITY { color: #ED8527; }
 .USDT { color: #2CA07A; }
 .VIA { color: #565656; }
+.VIB { color: #FF1F43; }
 .VIOR { color: #1F52A4; }
 .VNL { color: #404249; }
 .VPN { color: #589700; }
 .VRC { color: #418bca; }
 .VTC { color: #1b5c2e; }
 .WAVES { color: #24aad6; }
+.WAX { color: #F89022; }
+.WINGS { color: #0DC9F7; }
 .XAI { color: #2ef99f; }
 .XBC { color: #F7931A; }
 .XBS { color: #d3261d; }
 .XCP { color: #EC1550; }
+.XDN { color: #4F7AA2; }
 .XEM { color: #41bf76; }
 .XLM { color: #08B5E5; }
 .XMR { color: #FF6600; }
+.XMG { color: #004A80; }
 .XMY { color: #BC3182; }
 .XPM { color: #e5b625; }
 .XRP { color: #346AA9; }
@@ -163,6 +197,8 @@
 .XVG { color: #42AFB2; }
 .XZC { color: #23B852; }
 .YBC { color: #D6C154; }
+.ZEN { color: #234871; }
+.ZCL { color: #C87035; }
 .ZEC { color: #e5a93d; }
 .ZEIT { color: #ACACAC; }
 .ZRX { color: #302C2C; }
