--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -22,6 +22,7 @@
 .BSD { color: #1186E7; }
 .BTA { color: #210094; }
 .BTC, .BCH { color: #F7931A; }
+.BTG { color: #eba809; }
 .BTCD { color: #2A72DC; }
 .BTCP { color: #272D63; }
 .BTM { color: #9FA8B4; }
@@ -65,6 +66,7 @@
 .HEAT { color: #ff5606; }
 .HUC { color: #FFC018; }
 .ICN { color: #4c6f8c; }
+.ICX { color: #22C8CC; }
 .IFC { color: #ed272d; }
 .INCNT { color: #f2932f; }
 .IOC { color: #2fa3de; }
@@ -110,6 +112,7 @@
 .PIVX { color: #3b2f4d; }
 .POT { color: #105B2F; }
 .PPC { color: #3FA30C; }
+.PPT { color: #5a9ef6; }
 .QRK { color: #22AABF; }
 .QTUM { color: #359BCE; }
 .RADS { color: #924cea; }
@@ -137,10 +140,12 @@
 .SYNC { color: #008DD2; }
 .SYS { color: #0098DA; }
 .TRIG { color: #1fbff4; }
+.TRX { color: #c62734; }
 .TX { color: #1F8BCC; }
 .UBQ { color: #00ec8d; }
 .UNITY { color: #ED8527; }
 .USDT { color: #2CA07A; }
+.VEN { color: #15BDFF; }
 .VIA { color: #565656; }
 .VIOR { color: #1F52A4; }
 .VNL { color: #404249; }
